--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Purchase :
                   class="pd-b-5 block ckav-navigation--links"
                   href="#intro-section"
                 >
-                  Home
+                  COMING SOON
                 </a>
               </li>
               <li
@@ -220,7 +220,19 @@ Purchase :
                   class="pd-b-5 block ckav-navigation--links"
                   href="#contact-section"
                 >
-                  Contact
+                  BOUTIQUE
+                </a>
+              </li>
+              <li
+                data-menuanchor="social-section"
+                class="animated s008"
+                data-animIn="fadeInUp|0.9"
+              >
+                <a
+                  class="pd-b-5 block ckav-navigation--links"
+                  href="#social-section"
+                >
+                  SOCIALS
                 </a>
               </li>
             </ul>
@@ -282,7 +294,7 @@ Purchase :
 			************************************************************ -->
         <div
           class="section ckav-section pd-0 flex-bl bg-cover bg-cc typo-light"
-          data-bg="images/bg-14.jpg"
+          data-bg="images/Banner-Image.webp"
           data-tsection="sdark"
         >
           <!-- OVERLAY -->
@@ -482,7 +494,7 @@ Purchase :
             </div>
 
             <p class="mr-t-30 align-c txt-white op-07 fs12">
-              copyright <i class="far fa-copyright"></i> Harlienze
+              copyright <i class="far fa-copyright"></i> harlienz
               <span class="copyright-year"></span>
             </p>
           </div>
